WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199432
REGRESSION (
r246723
): ScrollingTreeOverflowScrollProxyNode::m_overflowScrollingNodeID is uninitialized sometimes
https://bugs.webkit.org/show_bug.cgi?id=199432
Summary
REGRESSION (r246723): ScrollingTreeOverflowScrollProxyNode::m_overflowScrolli...
Simon Fraser (smfr)
Reported
2019-07-02 20:29:06 PDT
REGRESSION (
r246723
): ScrollingTreeOverflowScrollProxyNode::m_overflowScrollingNodeID is uninitialized sometimes
Attachments
Patch
(1.86 KB, patch)
2019-07-02 20:31 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-02 20:31:23 PDT
Created
attachment 373378
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-07-02 20:32:18 PDT
<
rdar://problem/52563462
>
WebKit Commit Bot
Comment 3
2019-07-02 23:13:31 PDT
Comment on
attachment 373378
[details]
Patch Clearing flags on attachment: 373378 Committed
r247089
: <
https://trac.webkit.org/changeset/247089
>
WebKit Commit Bot
Comment 4
2019-07-02 23:13:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug