REGRESSION (r246723): ScrollingTreeOverflowScrollProxyNode::m_overflowScrollingNodeID is uninitialized sometimes https://bugs.webkit.org/show_bug.cgi?id=199432

Reviewed by Antti Koivisto.

I noticed while debugging rdar://problem/52291642 that m_overflowScrollingNodeID was uninitialized in
ScrollingTreeOverflowScrollProxyNode. This could lead to the wrong node being found by m_scrollingTree->nodeForID(),
which could result in type confusion bugs.

This can happen with negative z-order layers when we fail to find their related scrolling tree node
on the first pass.

* page/scrolling/cocoa/ScrollingTreeOverflowScrollProxyNode.h:


Canonical link: https://commits.webkit.org/213358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247089 268f45cc-cd09-0410-ab3c-d52691b4dbfc